# api/http/v1/openapi.types.go
@@ -1,6 +1,6 @@
 // Package v1 provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.16.2 DO NOT EDIT.
 package v1
 
 import (
@@ -45,8 +45,8 @@ const (
 
 // ChangePasswordRequest defines model for ChangePasswordRequest.
 type ChangePasswordRequest struct {
-	NewPassword *string `json:"newPassword,omitempty"`
-	OldPassword *string `json:"oldPassword,omitempty"`
+	NewPassword *string `json:"new_password,omitempty"`
+	OldPassword *string `json:"old_password,omitempty"`
 }
 
 // CheckEnrollCodeResponse defines model for CheckEnrollCodeResponse.
@@ -234,6 +234,11 @@ type ListRuleParams struct {
 	RuleFindOptions *RuleFindOptions `form:"ruleFindOptions,omitempty" json:"ruleFindOptions,omitempty"`
 }
 
+// SendCodeJSONBody defines parameters for SendCode.
+type SendCodeJSONBody struct {
+	Email openapi_types.Email `json:"email"`
+}
+
 // CreateHostJSONRequestBody defines body for CreateHost for application/json ContentType.
 type CreateHostJSONRequestBody = Host
 
@@ -263,6 +268,9 @@ type LoginUserJSONRequestBody = LoginRequest
 
 // RegisterUserJSONRequestBody defines body for RegisterUser for application/json ContentType.
 type RegisterUserJSONRequestBody = RegisterRequest
+
+// SendCodeJSONRequestBody defines body for SendCode for application/json ContentType.
+type SendCodeJSONRequestBody SendCodeJSONBody
 
 // VerifyCodeJSONRequestBody defines body for VerifyCode for application/json ContentType.
 type VerifyCodeJSONRequestBody = VerifyCodeRequest
