# ports/user.go
@@ -26,27 +26,35 @@ func (h *HttpHandler) ChangePassword(c *gin.Context) {
 	userID := id.(string)
 
 	password := pkgstring.Md5(*req.OldPassword)
-	u, err := h.app.User.Queries.Handler.Get(c, &user.GetUser{
+	userInfo, err := h.app.User.Queries.Handler.Get(c, &user.GetUser{
 		ID: userID,
 	})
 	if err != nil {
-		http.FailedResponse(c, "用户不存在")
 		return
 	}
 
-	if u.Password != password {
-		http.FailedResponse(c, "修改失败")
+	if userInfo.Password != password {
+		http.FailedResponse(c, "旧密码错误")
 		return
 	}
+
+	userInfo.Password = pkgstring.Md5(*req.NewPassword)
+
 	_, err = h.app.User.Commands.Handler.Update(c, &user.UpdateUser{
-		ID:       userID,
-		Password: *req.NewPassword,
+		ID:           userInfo.ID,
+		Password:     userInfo.Password,
+		Token:        userInfo.Token,
+		Name:         userInfo.Name,
+		Email:        userInfo.Email,
+		Status:       uint(userInfo.Status),
+		Verification: userInfo.Verification,
 	})
 	if err != nil {
 		http.FailedResponse(c, "修改失败")
 		return
 	}
 
+	http.SuccessResponse(c, "修改成功", gin.H{})
 }
 
 func (h *HttpHandler) LoginUser(c *gin.Context) {
@@ -116,4 +124,43 @@ func (h *HttpHandler) VerifyCode(c *gin.Context) {
 		http.FailedResponse(c, "参数错误")
 		return
 	}
+
+	email, err := req.Email.MarshalJSON()
+	if err != nil {
+		http.FailedResponse(c, "参数错误")
+		return
+	}
+
+	// 去除双引号
+	newemail := strings.Trim(string(email), "\"")
+
+	if err := h.app.User.Commands.Handler.Verify(c, newemail, *req.Code); err != nil {
+		http.FailedResponse(c, err.Error())
+		return
+	}
+
+	http.SuccessResponse(c, "激活成功", nil)
+}
+
+func (h *HttpHandler) SendCode(c *gin.Context) {
+	req := &v1.VerifyCodeRequest{}
+	if err := c.ShouldBindJSON(req); err != nil {
+		http.FailedResponse(c, "参数错误")
+		return
+	}
+
+	email, err := req.Email.MarshalJSON()
+	if err != nil {
+		http.FailedResponse(c, "参数错误")
+		return
+	}
+
+	// 去除双引号
+	newemail := strings.Trim(string(email), "\"")
+	if err := h.app.User.Commands.Handler.SendCode(c, newemail); err != nil {
+		http.FailedResponse(c, err.Error())
+		return
+	}
+
+	http.SuccessResponse(c, "发送成功", nil)
 }
